--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,7 @@ repos:
     rev: 19.3b0
     hooks:
     -   id: black
+        language_version: python3.8
 -   repo: https://github.com/PyCQA/flake8
     rev: 3.9.0
     hooks:
