--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,9 @@ uvicorn==0.13.4
 uvloop==0.15.2
 watchgod==0.7
 websockets==8.1
-requests
+Werkzeug==1.0.1
+email-validator==1.1.2
+SQLAlchemy==1.4.12
+SQLAlchemy-Utils==0.37.0
+async-exit-stack==1.0.1
+async-generator==1.10
