Stock robot prototype

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,12 @@ services:
       - ./app/:/app/app
     ports:
       - 5000:5000
+  chatbot:
+    container_name: some-chatbot
+    build:
+      context: .
+      dockerfile: stockrobot.dockerfile
+
+    command: python robot.py
+    depends_on:
+      - app
